--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,12 @@
 language: python
+
 python:
   - "2.6"
   - "2.7"
+
 install:
   - "pip install -r requirements.txt"
+  - "pip install -r test_requirements.txt"
+
 script: make tests
+
