Add example application and update PYPI packaging.
The new packaging includes tests, which have been updated to work
correctly even when run from an application with conflicting URLs,
templates, or other settings.

The example application also includes a very simple README with
instructions on how to get started.

Add example application.

Add initial fixtures data, README, and remove unnecessary settings.

Allow test-running from example apps with conflicting URLs.

Simplify distribution command name.

Update README.

Attempt to fix formatting.

Update example project's README.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,19 @@
+# Temporary files
 *.DS_Store
 *.pyc
-.coverage
+
+# Documentation
 docs/_build/*
+
+# Coverage
+.coverage
 docs/coverage
+
+# PYPI Distribution
+dist
+MANIFEST
+djoauth2.egg-info
+
+# Example application
+example/database
 
