--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ python:
 
 install:
   - "pip install -r requirements.txt"
-  - "pip install -r test_requirements.txt"
+  - "pip install -r djoauth2/tests/requirements.txt"
 
 script: make tests
 
