--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,21 @@ language: python
 python:
   - "2.7"
 
+env:
+  - DJANGO_VERSION=1.4.3
+  - DJANGO_VERSION=1.4.4
+  - DJANGO_VERSION=1.4.5
+  - DJANGO_VERSION=1.4.6
+  - DJANGO_VERSION=1.4.7
+  - DJANGO_VERSION=1.4.8
+  - DJANGO_VERSION=1.5
+  - DJANGO_VERSION=1.5.1
+  - DJANGO_VERSION=1.5.2
+  - DJANGO_VERSION=1.5.3
+  - DJANGO_VERSION=1.5.4
+
 install:
+  - "pip install -q Django==$DJANGO_VERSION"
   - "pip install -r requirements.txt"
 
 script: make tests
