Update automatic testing.

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,23 @@ python:
   - "2.7"
 
 env:
+  # For Django 1.4.X, only support South 0.7.6 (the latest available version
+  # compatible with that series.)
+  - DJANGO_VERSION=1.4   SOUTH_VERSION=0.7.6
+  - DJANGO_VERSION=1.4.1 SOUTH_VERSIOn=0.7.6
   - DJANGO_VERSION=1.4.2 SOUTH_VERSION=0.7.6
+  - DJANGO_VERSION=1.4.3 SOUTH_VERSION=0.7.6
+  - DJANGO_VERSION=1.4.4 SOUTH_VERSION=0.7.6
+  - DJANGO_VERSION=1.4.5 SOUTH_VERSION=0.7.6
+  - DJANGO_VERSION=1.4.6 SOUTH_VERSION=0.7.6
+  - DJANGO_VERSION=1.4.7 SOUTH_VERSION=0.7.6
+  - DJANGO_VERSION=1.4.8 SOUTH_VERSION=0.7.6
+  # For Django 1.5.X only support South 0.8.2 (the latest available version
+  # compatible with that series.)
+  - DJANGO_VERSION=1.5   SOUTH_VERSION=0.8.2
+  - DJANGO_VERSION=1.5.1 SOUTH_VERSION=0.8.2
+  - DJANGO_VERSION=1.5.2 SOUTH_VERSION=0.8.2
+  - DJANGO_VERSION=1.5.3 SOUTH_VERSION=0.8.2
   - DJANGO_VERSION=1.5.4 SOUTH_VERSION=0.8.2
 
 install:
