--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,13 @@ env:
   - DJANGO_VERSION=1.5.2 SOUTH_VERSION=0.8.2
   - DJANGO_VERSION=1.5.3 SOUTH_VERSION=0.8.2
   - DJANGO_VERSION=1.5.4 SOUTH_VERSION=0.8.2
+  - DJANGO_VERSION=1.5.4 SOUTH_VERSION=0.8.2
+  - DJANGO_VERSION=1.5.5 SOUTH_VERSION=0.8.2
+  # For Django 1.6.X only support South 0.8.4 (the latest available version
+  # compatible with that series.)
+  - DJANGO_VERSION=1.6 SOUTH_VERSION=0.8.4
+  - DJANGO_VERSION=1.6.1 SOUTH_VERSION=0.8.4
+  - DJANGO_VERSION=1.6.2 SOUTH_VERSION=0.8.4
 
 install:
   - "pip install -q Django==$DJANGO_VERSION"
